--- a/src/ant - shaped_base/index.html
+++ b/src/ant - shaped_base/index.html
@@ -13,10 +13,11 @@
         <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
         <a class="header-btn" href="../ant - shaped_base/index.html">Муравьиный алгоритм</a>
         <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
-        <a class="header-btn" href="../neural_network/index.html">Нейронные сети</a>
+        <a class="header-btn" href="../neural_network_bonus/dr/index.html">Нейронные сети</a>
     </div>
     <div class="main-part">
-        <canvas class="canvas" id="canvas" width="800" height="600";">Похоже, пора обновиться:)</canvas>
+        <noscript>Если хочешь что-то увидеть, то включи Java Script в натройках браузера.</noscript>
+        <canvas class="canvas" id="canvas" width="800" height="600" ;">Похоже, пора обновиться:)</canvas>
 
         <div class="stats">
             <button class="std-btn genetic-btn" id="startButton">Запустить алгоритм</button>
