--- a/src/clustering_bonus/index.html
+++ b/src/clustering_bonus/index.html
@@ -16,9 +16,11 @@
         <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
         <a class="header-btn" href="../ant - shaped_base/index.html">Муравьиный алгоритм</a>
         <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
-        <a class="header-btn" href="../neural_network/index.html">Нейронные сети</a>
+        <a class="header-btn" href="../neural_network_bonus/dr/index.html">Нейронные сети</a>
     </div>
+
     <div class="main-part">
+        <noscript>Если хочешь что-то увидеть, то включи Java Script в натройках браузера.</noscript>
         <canvas id="canvas">Похоже пора обновиться:)</canvas>
         <div class="main-part-input-container">
             <button class="std-btn" id="clusterButton">Запустить кластеризацию K-средних</button>
