--- a/src/decisionTree/index.html
+++ b/src/decisionTree/index.html
@@ -11,14 +11,15 @@
 
 <body>
     <div class="header">
-        <a class="header-btn" href="../a_star/index.html">A*</a>
-        <a class="header-btn" href="../clustering_bonus/index.html">Кластеризация</a>
-        <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
-        <a class="header-btn" href="../ant - shaped_base/index.html">Муравьиный алгоритм</a>
-        <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
-        <a class="header-btn" href="../neural_network/index.html">Нейронные сети</a>
+        <a class="header-btn" href="../a_star/index.html">a*</a>
+        <a class="header-btn" href="../clustering_bonus/index.html">кластеризация</a>
+        <a class="header-btn" href="../genetic/index.html">генетический алгоритм</a>
+        <a class="header-btn" href="../ant - shaped_base/index.html">муравьиный алгоритм</a>
+        <a class="header-btn" href="../decisiontree/index.html">дерево решений</a>
+        <a class="header-btn" href="../neural_network_bonus/dr/index.html">нейронные сети</a>
     </div>
     <div class="main-part">
+        <noscript>Если хочешь что-то увидеть, то включи Java Script в натройках браузера.</noscript>
         <div class="main-part-input-container">
             <div class="data-input-zone">
                 <textarea id="csv-input" class="std-input decision-tree-text-area"
